--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>escort b2</title>
     <link rel="stylesheet" href="estilo.css">
+    <link rel="website icon" type="png" href="imagens/download.png"        
     <header class="cabecalho">
         <div class="roger">
       <H1>continuaçao</H1>        
