--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <header class="cabecalho">
         <div class="roger">
       <H1>continuaçao</H1>        
-        
+        <p>
+          gustavo xavier e viciado :D
+        </p>
         </div>
 
             
