--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>escort b2</title>
+    <title>Trabalho Programaçao</title>
     <link rel="stylesheet" href="estilo.css">
-    <link rel="website icon" type="png" href="imagens/download.png"        
+    <link rel="website icon" type="png" href="imagens/download.png">
+        
     <header class="cabecalho">
         <div class="roger">
       <H1>continuaçao</H1>        
