--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <p>
           gustavo xavier e viciado? :D
         </p>
-        <input type="radio">
-        
+        <input type="checkbox">
+
         </div>
 
             
