--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
         <p>
           gustavo xavier e viciado? :D
         </p>
-        <input type="checkbox">
 
+        </div>
+        <div class="botao">
+          <input type="checkbox">
+        
         </div>
 
             
