--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         </p>
 
         </div>
-        <div class="botao">
+        <div class="botao1">
           <input type="checkbox">
+          <h1>sim</h1>
         
         </div>
 
