--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="botao1">
           <input type="checkbox">
-          <h1>sim</h1>
+          <a>sim</a>
         
         </div>
 
