--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="roger">
       <H1>continuaçao</H1>        
         <p>
-          gustavo xavier e viciado? :D
+          Gustavo Xavier e viciado? :D
         </p>
 
         </div>
@@ -19,8 +19,13 @@
           <input type="checkbox">
           <a>sim</a>
         
-        </div>
-
+        </div>  
+        <label>
+          <input type="checkbox" id="toggle-text">
+        </label>
+        <p id="text" class="hidden">
+          sim
+      </p>
             
     </header>
 </head>
