--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
 
         </div> 
         <label>
-          <input type="checkbox" id="toggle-text">
+          <input type="checkbox" id="toggle-text"> <p id="text" class="hidden">
+            sim
+        </p>
         </label>
-        <p id="text" class="hidden">
-          sim
-      </p>
             
     </header>
 </head>
